--- a/gb/15/11/4/n4565742.md
+++ b/gb/15/11/4/n4565742.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vvzrfn3290/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vvzrfn3290/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vvzrfn3290/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vvzrfn3290/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vvzrfn3290/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【解散党组织】没有党组织 中国才会太平</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2015年11月05日讯】中共总是在欺骗中国人，好像没有中共，中国社会就不可能正常运转。事实上，古今中外的历史说明，没有党组织，中华民族更辉煌，中国社会更和谐；没有党组织，中国才会太平。</p>
-<p><ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/15/11/4/n4565722.md#1 " target="_blank">【解散党组织之一】中共党组织为何物？</a><br /><ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/15/11/4/n4565762.md#1<br /> &#8221; target=&#8221;_blank&#8221;>【解散党组织之三】从基层做起势在必行</a><br /><ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/15/10/28/n4560376.md#1 " target="_blank">【解散党组织】基层党组织的溃烂（上）</a><br /><ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/15/10/29/n4560935.md#1 " target="_blank">【解散党组织】去除画皮从基层做起（下）</a></p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/11/4/n4565722.md#1 " target="_blank">【解散党组织之一】中共党组织为何物？</a><br /><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/11/4/n4565762.md#1<br /> &#8221; target=&#8221;_blank&#8221;>【解散党组织之三】从基层做起势在必行</a><br /><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/10/28/n4560376.md#1 " target="_blank">【解散党组织】基层党组织的溃烂（上）</a><br /><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/10/29/n4560935.md#1 " target="_blank">【解散党组织】去除画皮从基层做起（下）</a></p>
 <p></p>
 <h2>没有党组织 中华民族创造了辉煌文明 </h2>
 <p>早在19世纪共产主义和20世纪共产党包括中共出笼之前，在中国这块为神所属意和眷顾的土地上，中华民族已经创造出了无比辉煌的文明。诸子百家的光芒、经济科技医学等方面的成就，至今为世界所惊叹，为中国人引以为豪。</p>
@@ -18,13 +18,13 @@
 <p><h2>党组织瘫痪 社会运行更和谐 </h2>
 <p>《九评共产党》一针见血地指出，党组织像一个巨大的邪灵附体附在中国社会的每一个单元细胞上，以它细致入微的吸血管道控制和操纵着整个社会。它用暴政掠夺和控制资源，又用所获资源骄奢淫逸和控制社会。党组织不创造任何财富，要靠人民养活，却垄断和支配人民的财富迫害人民。</p>
 <p>这就自然地产生了一个命题：人民、国家和社会有无必要容忍和承负党组织这样一个多余的废物和桎梏？一旦党组织瘫痪，中国社会会怎么样？对此，有两个特例可以提供启示。</p>
-<p>乌坎村自治是2011年9月至2012年4月发生在广东省汕尾所属陆丰市的一起村民抗争当地中共恶势力，在原村党组织实际瘫痪的状况下，实行<ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB%E9%80%89%E4%B8%BE.md#1">民主选举</a>和自治的标志性事件。</p>
+<p>乌坎村自治是2011年9月至2012年4月发生在广东省汕尾所属陆丰市的一起村民抗争当地中共恶势力，在原村党组织实际瘫痪的状况下，实行<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB%E9%80%89%E4%B8%BE.md#1">民主选举</a>和自治的标志性事件。</p>
 <p>中共基层已普遍黑社会化。据官方抽样调查结果显示，中国近半数的农村村委会被当地党政黑恶势力把持。农村土地被基层党政黑恶势力私自变卖牟利并不给农民补偿或补偿不足是一个非常普遍的问题。调查显示，中国每年民众集体维权的群体性事件多达十余万起，其中强行征地与补偿引发的群体事件占六成左右。乌坎村民由于土地被村委会私下变卖，曾经十几次上访，并多次举行示威，人数多时达三四千人，但一直没有解决实质问题。</p>
 <p>之后，村民撇开原党组织和村领导，自发成立“乌坎村村民临时代表理事会”，以姓氏规模比例推举出117名有投票权的村民代表，其内再由每个姓氏挑出一人，共38位候选人，再在其中选出“乌坎村村民临时代表理事会”13名成员，其财政来源来自于向村民募捐款项，每笔捐款与支出都在村内主要庙宇中张贴公开。村民在抗争中，打出“打倒贪官”、“还我耕地”、“惩治腐败”、“官商勾结扼杀民主”等标语和横幅。汕尾市政府在拘留多名村民的过程中造成其中一人死亡，官方验尸结果与死者家人探视后认定的情况大相径庭，造成矛盾激化，引起国内外媒体的关注。</p>
 <p>广东省委书记汪洋介入后，省委代表称民众的主要诉求合理。随后由村民选代表负责领导村委会重新选举的工作，乌坎村原党支部自行解散，把持乌坎村四十几年的党支部书记等被双规。村民民主选出村民选举委员会、选村民代表、村民委员会主任副主任等。</p>
 <p>“乌坎自治”的重要意义在于党组织瘫痪后民众显示出来的自治能力。第一、乌坎村民民主自治是在原村党组织实际瘫痪情况下实现的。这一实践证明，民众摆脱原有党组织后完全能自我管理和运转。尽管上级党组织在选举中强行重建村党组织，任命民选代表为党组织负责人，但这一不得已的行为，恰恰证明中共不得不承认民众自治的现状和能力，党组织实际上沦为一种摆设。</p>
 <p>第二、当时“乌坎自治”是民众自发取代原党支部和村委会的局部行为。当时整体中共体制仍在运转，当上级党组织强行干预时，民众要完全摆脱体制干预还相当难。今天中共重新修订“纪律处分”条例，称将对严重违纪的党组织进行改组或解散，这说明中共组织已经烂掉，大规模的瘫痪已成为普遍现实。这为今天“乌坎自治”遍地开花、基层民众大规模摆脱中共进行自行管理，创造了条件。“乌坎自治”是带有启示性的预演。</p>
-<p>第三、当时乌坎能够实行有限<ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB%E9%80%89%E4%B8%BE.md#1">民主选举</a>和自治，并迫使中共承认其合法性，是与汪洋、温家宝、胡锦涛、习近平、李克强等人的宽容和支持分不开的。温家宝在2012年3月抓捕薄熙来后的第十三次全国民政会议上，肯定了“乌坎模式”，这实际上是否定了薄熙来用以政变夺权的文革型的“重庆模式”，也是胡温习李王联盟全面清除江派的先期信号。</p>
+<p>第三、当时乌坎能够实行有限<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB%E9%80%89%E4%B8%BE.md#1">民主选举</a>和自治，并迫使中共承认其合法性，是与汪洋、温家宝、胡锦涛、习近平、李克强等人的宽容和支持分不开的。温家宝在2012年3月抓捕薄熙来后的第十三次全国民政会议上，肯定了“乌坎模式”，这实际上是否定了薄熙来用以政变夺权的文革型的“重庆模式”，也是胡温习李王联盟全面清除江派的先期信号。</p>
 <p>1989年天安门民主运动是民众在没有党组织或党组织瘫痪后实行自我管理的又一特例。根据当时的报导和事后的回忆，广场学生和北京市民曾自发组织起来维持秩序，游行队伍自觉遵守秩序，广场秩序井然，整个北京市的治安状况和文明礼貌都比平时大有改善。 </p>
 <p>据报导记载，那些天整个北京市的秩序比平时更好，人们的文明程度似乎突然提高。在公共汽车站，不再看到以前的拥挤不堪，而是人人自觉地排队；在公共汽车上，不再看到为抢座位争吵，而是互相让座，尊老爱幼；两人自行车相撞后，不再是争吵不休，而是说“对不起”“没关系”。警察对在广场的学生承认，在这场近两个月的“动乱”和“暴乱”中，“北京的治安从来没有现在这样好过” 。 </p>
 <p>当时北京市党组织忙于配合中央对学生镇压，对广场的行政管理和秩序维持放手不管。这时出现了学生纠察队与警察并肩执勤共同维持秩序的现象。5月中旬后，天安门广场每日人流量骤增。17日和18日，北京各界声援学生的绝食活动达到高潮，每天从东西长安街和前三门大街涌向广场的人数超过百万，游行的人们有的步行，有的骑自行车，在高峰时广场进出救护车每分钟达三至四次，广场秩序维持压力很大。17日下午，高校学生代表要求北京市公安局派公安干警协助学生纠察队维持秩序，市公安局很快做出答复，派出800名干警进入广场。与此同时，东西长安街上一些主要路口由警察与学生共同执勤，有的路口有附近机关人员联合组成的交通指挥小组帮忙，保证了对绝食同学的抢救和游行队伍的疏通。</p>
@@ -44,7 +44,7 @@
 <p><h2>党组织反现代管理规律，没有党组织，企业和政府运作更有效 </h2>
 <p>在美国乡镇看到的最好的房舍通常是当地的学校，而在中国县城看到的最好的房舍十有八九是党政机关。反腐中抓出了大批中共巨贪。保守地讲，中共官员十官九贪。这些说明，共产党维持自身权力和剥夺民众权利的一个目的，就是要保证自己获得最大利益。这就注定了它对人民对社会来说，是一个代价极其昂贵的、非生产性的、反现代管理规律的、反人性的邪党。</p>
 <p>中共是一个非生产性的寄生虫。它迫害和奴役人民，又强迫人民供养它。中国人民辛勤劳作创造的财富，大部分都被强制用于供养共产党。中国人民60多年来供养了一个世界上最庞大最昂贵的党的官僚体系。据统计，中共有4万多个乡镇街道党委、近3千个县级党委、3百多个地市级党委、31个省级党委和一个庞大的党中央。此外还有成千上万的军、师、旅、团、院、校、系、所及各种企事业党委等等。养党经费之巨可想而知。中共喜欢宣传美国总统大选的开支如何如何巨大。根据美国联邦选举委员会网站公布的数字，2004年美国总统大选花费总额为十亿零一百六十五万美元。折合当时人民币八十多亿。据估算，这不够中共两周的养党费。中国行（党）政支出占据整个国家财政支出的39%以上。此一比例远远超出美国的7.9%，德国的7.7%，俄罗斯的7.6%，加拿大的7.1%，英国的4.2%。每年光是“三公”（公款车辆、公款吃喝、公款旅游）开销就达一万亿以上，占国家年度财政收入的13%。各级党政机关的小金库是另一个巨大的黑洞。至于中共官员贪腐之巨，已无人能确切知道它到底吞噬了多少人民财富。</p>
-<p>中共权力渗透到政府经济部门、企事业单位和一切部门，甚至民营企业。它的所谓经营管理是掠夺性的、反人性的、无道德底线的，与现代管理讲科学、讲效率、讲代价的方法完全相反。中共用公有化把社会和私人财产变成党控制的国有财产，再把国有财产变为党干部的私有财产。中共长期用低工资剥削职工，改革开放后又用各种买断方式甩掉被榨尽血汗的的职工。中共只顾GDP的生产方式造成严重产能过剩和环境污染。中共强夺强卖土地和片面发展房地产的政策造成大量农民失地抗争和房地产泡沫化。中共摧毁传统文化和道德良知使市场充斥毒食品、假食品和高价斩人食品，而中共干部却长期享用各种特供和特权。尤其恶劣的是，中共<ahref="https://github.com/vvzrfn3290/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团利用军队、武警、医院等系统把大规模活摘和贩卖法轮功学员器官的大屠杀变为牟取暴利的生产流水作业，突破了人类道德的底线。</p>
+<p>中共权力渗透到政府经济部门、企事业单位和一切部门，甚至民营企业。它的所谓经营管理是掠夺性的、反人性的、无道德底线的，与现代管理讲科学、讲效率、讲代价的方法完全相反。中共用公有化把社会和私人财产变成党控制的国有财产，再把国有财产变为党干部的私有财产。中共长期用低工资剥削职工，改革开放后又用各种买断方式甩掉被榨尽血汗的的职工。中共只顾GDP的生产方式造成严重产能过剩和环境污染。中共强夺强卖土地和片面发展房地产的政策造成大量农民失地抗争和房地产泡沫化。中共摧毁传统文化和道德良知使市场充斥毒食品、假食品和高价斩人食品，而中共干部却长期享用各种特供和特权。尤其恶劣的是，中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团利用军队、武警、医院等系统把大规模活摘和贩卖法轮功学员器官的大屠杀变为牟取暴利的生产流水作业，突破了人类道德的底线。</p>
 <p>英国经济学家亚当?斯密认为：参加一项交易的双方必须都能得到好处。中国人几十年与中共打交道得到的教训却是：除了被剥夺被迫害，就是被欺骗。民主和市场经济国家有一句话：最好的政府是管得最少的政府。中共的强征暴敛对民众的侵害已使它不配用管多管少的政府标准去衡量，它根本就是一个非人性的邪灵和魔鬼。因此，铲除中共党组织是回归正常生产规律和政府职能的必由之路。</p>
 <p>在世界上大多数国家和地区，在我们熟知的台湾、韩国、日本、美国、欧洲等地，都没有类似中共邪党对政府和企业的渗透和附体，政府和企业都能正常和有效运转。在中国近三十多年的改革开放中，有一条一直在起作用的规律：哪里党组织这只有形的手干预得少，哪里市场这只无形的手主宰得多，哪里就发展得快；反之就发展得慢。 </p>
 <p>党组织不符合人性，必然被人民抛弃。没有共产党的公民自治将更有效率。这已被古今中外历史和现实所证明。美国民主奠基人之一、发明家、成功企业家佛兰克林曾订立了13条道德准则，把美德作为处事和管理的最好方法。</p>
@@ -55,41 +55,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/14/8/27/n4234158.md#1">《江泽民其人》：大陆教育惊心乱象</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/10/23/n4556697.md#1">《北京青年报》头版提出“解散党组织”</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/10/25/n4558025.md#1">分析：习近平试水“解散党组织”</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/10/26/n4558394.md#1">伍新：好人退齐党解体</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/8/27/n4234158.md#1">《江泽民其人》：大陆教育惊心乱象</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/10/23/n4556697.md#1">《北京青年报》头版提出“解散党组织”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/10/25/n4558025.md#1">分析：习近平试水“解散党组织”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/10/26/n4558394.md#1">伍新：好人退齐党解体</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/10/n13080166.md#1">海地总统遭暗杀 英国灵媒预言成真</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/7/n13073679.md#1">【命理】雷神震怒 警惕不孝不义之人</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/8/n13077302.md#1">【小宇宙传说】世界各地的圣像为何落泪？</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/9/n13079287.md#1">【古韵流芳】高风亮节虞世南 大唐第一咏蝉诗</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/11/n13082243.md#1">【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/13/n13086810.md#1">【直播】法轮功反迫害22周年 华府集会游行</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13091782.md#1">【首播】专访盛慕真教授：毛的血腥群众运动</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13092060.md#1">【秦鹏直播】美机再抵台 中共态度大变 嘴硬腿软</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13087451.md#1">莫言被踢出“中国百年名作家”之列 视频热传</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13087339.md#1">【新闻大家谈】陈光诚：抗共须跳出2怪圈</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13088323.md#1">如何在没有空调的情况下保持凉爽</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/13/n13086946.md#1">让妻女坐经济舱 郭富城被网民说太抠门</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089010.md#1">获悉《苹果》员工觅得好去处 杜汶泽大气回应</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089199.md#1">范冰冰独立开新公司 与旧爱李晨彻底割席</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089339.md#1">昆凌晒6岁女儿手写英文诗 拐弯抹角夸周杰伦</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13091975.md#1">刘嘉玲梁朝伟同台走秀 两人反差状态超喜感</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13089763.md#1">疫苗新副作用？打强生出现神经问题 1类人警惕</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13089939.md#1">小金鱼野放美国湖泊 长成几十公分巨无霸</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13090127.md#1">法男心灵感应与预知能力 震撼《美国达人秀》</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/10/n13080633.md#1">养好胃口才能抗癌！营养师：癌症饮食3大要诀</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13088331.md#1">【直播】Delta变种比想像可怕 第五波疫情恐到来？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vvzrfn3290/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vvzrfn3290/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/11/4/n4565742.htm">【解散党组织】没有党组织 中国才会太平</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/11/4/n4565742.htm">【解散党组织】没有党组织 中国才会太平</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vvzrfn3290/djy/blob/master/gb/15/11/4/n4565742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vvzrfn3290/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vvzrfn3290/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvzrfn3290/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/11/4/n4565742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
